kube/base-components/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: starcoin-main
  labels:
    app: starcoin
    kubernetes.io/metadata.name: starcoin-main
    name: starcoin-main
    network: main

---
apiVersion: v1
kind: Namespace
metadata:
  name: starcoin-barnard
  labels:
    app: starcoin
    kubernetes.io/metadata.name: starcoin-barnard
    name: starcoin-barnard
    network: barnard

---
apiVersion: v1
kind: Namespace
metadata:
  name: starcoin-proxima
  labels:
    app: starcoin
    kubernetes.io/metadata.name: starcoin-proxima
    name: starcoin-proxima
    network: proxima

---
apiVersion: v1
kind: Namespace
metadata:
  name: starcoin-halley
  labels:
    app: starcoin
    kubernetes.io/metadata.name: starcoin-halley
    name: starcoin-halley
    network: halley


---
apiVersion: v1
kind: Namespace
metadata:
  name: starcoin-vega
  labels:
    app: starcoin
    kubernetes.io/metadata.name: starcoin-vega
    name: starcoin-vega
    network: vega
