kube/base-components/postgresql-swapinfo-restore.yaml
# Postgresql deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-swapinfo-restore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-swapinfo-restore
  template:
    metadata:
      labels:
        app: postgres-swapinfo-restore
    spec:
      containers:
        - name: postgres-swapinfo-restore
          command: ["/bin/sh", "-c", "sleep infinity"]
          image: postgres:13
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "4Gi"
              cpu: "2"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-swapinfo-storage
      volumes:
        - name: postgres-swapinfo-storage
          persistentVolumeClaim:
            claimName: postgres-swapinfo-pvc
