kube/base-components/allowaccess-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-pg-from-vega
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: starcoin-vega
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-es-from-vega
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: elasticsearch
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: starcoin-vega
